Adding dockerfile and postman collection. Adjusments in tests.